<resources>
    <string name="app_name">Waltrus Password Manager</string>
    <string name="app_name_short">Waltrus</string>
    <string name="tab_text_1">Generate</string>
    <string name="tab_text_2">Vault</string>
    <string name="tab_text_3">Settings</string>
    <string name="vault_header">Your saved credentials for websites</string>
    <string name="generate_header">Generate new strong passwords</string>
    <string name="generate_password">Generate Password</string>
    <string name="fab_desc">New entry</string>
    <string name="password_shown_icon_desc">show passwords icon</string>
    <string name="settings">Settings</string>
    <string name="about_text">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="gen_password_header">New password preferences</string>
    <string name="master_password_header">Master password preferences</string>
    <string name="vault_fragment_header">Vault preferences</string>
    <string name="vault_duration_title">Auto-lock duration</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="pwd_length_title">Set new password length</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="master_password_title">Set master password</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_header">About Secure Password Manager</string>
    <string name="about_blah">Designed and developed by Mansukh Pamarath ©2021</string>
    <string name="contact_me">Contact me</string>
    <string name="version">Version 0.1</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="reply_title">Default reply action</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="pwd_special_title">Include special characters</string>
    <string name="pwd_upper_title">Include upper case characters</string>
    <string name="pwd_lower_title">Include lower case characters</string>
    <string name="pwd_number_title">Include numbers</string>
    <string name="general_pref_title">General preferences</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="set_master_password_header">Set your master password to access passwords</string>
    <string name="mpassword_prompt_title">Enter Master Password</string>
    <string name="otp_code_field_hint">OTP Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_creds">AddCredsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>